<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout 
        android:id="@+id/linearLayoutExpression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >
        
    	<EditText
       		android:id="@+id/textViewExpression"
      		android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_toLeftOf="@+id/action_remove"
        	android:padding="8dp"
        	android:gravity="right|bottom"
        	android:singleLine="true"
        	android:ems="10"
        	android:hint="@string/expression" >
    	</EditText>
    	
    	<ImageButton 
    	    android:id="@+id/action_remove"
    	    android:layout_width="48dp"
    	    android:layout_height="48dp"
    	    android:layout_alignParentRight="true"
    	    android:layout_alignBottom="@+id/textViewExpression"
    	    android:contentDescription="@string/action_remove"
    	    android:src="@drawable/ic_action_remove"
    	    android:onClick="buttonRemove_OnClick"
    	    style="?android:attr/actionButtonStyle" />
	</RelativeLayout>
	
    <HorizontalScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayoutMats"
        android:layout_below="@+id/linearLayoutExpression"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scrollbarStyle="insideInset" >
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
            
            <GridView
                android:id="@+id/gridView0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutMats"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gridLayout" >

        <Button
            android:id="@+id/buttonAddMatrix"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_matrix"
            android:onClick="buttonAddMatrix_OnClick" />

        <Button
            android:id="@+id/buttonAns"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matrix_answer"
            android:onClick="buttonMatrix_OnClick" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
        
        <Button 
            android:id="@+id/buttonAdd" 
            android:layout_width="48dp"
            android:layout_height="48dp" 
            android:text="@string/op_add" 
            android:onClick="operators_OnClick" 
            android:tag="4" />

        <Button 
            android:id="@+id/buttonMinus" 
            android:layout_width="48dp" 
            android:layout_height="48dp" 
            android:text="@string/op_minus" 
            android:onClick="operators_OnClick" 
            android:tag="4" />

        <Button 
            android:id="@+id/buttonMulti" 
            android:layout_width="48dp" 
            android:layout_height="48dp" 
            android:text="@string/op_multi" 
            android:onClick="operators_OnClick" 
            android:tag="3" />

        <Button
            android:id="@+id/buttonLBrac"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/op_left_brac"
            android:onClick="operators_OnClick"
            android:tag="1" />
        
        <Button
            android:id="@+id/buttonRBrac"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/op_right_brac"
            android:onClick="operators_OnClick"
            android:tag="5" />

        <Button 
            android:id="@+id/buttonTrans" 
            android:layout_width="wrap_content" 
            android:layout_height="48dp" 
            android:text="@string/op_trans" 
            android:onClick="operators_OnClick" 
            android:tag="1" />
        
        <Button 
            android:id="@+id/buttonEqual" 
            android:layout_width="48dp" 
            android:layout_height="48dp" 
            android:text="@string/op_equal" 
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="operators_OnClick" />

        <ImageButton 
            android:id="@+id/buttonBksp" 
            android:layout_width="48dp" 
            android:layout_height="48dp" 
            android:src="@drawable/ic_action_backspace"
            android:contentDescription="@string/op_backspace"
            android:layout_row="1"
            android:onClick="operators_OnClick" />

    </GridLayout>
    
</RelativeLayout>
